{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 806,
  "lineage": "9ad14921-3aee-7ab0-a3fd-1dfb6202ad76",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-06-26T16:12:48.924-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/came-devops-dev-423320/global/firewalls/m2c-vpc-dev-allow-internal",
            "log_config": [],
            "name": "m2c-vpc-dev-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "priority": 1000,
            "project": "came-devops-dev-423320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/firewalls/m2c-vpc-dev-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1433"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-26T16:12:48.827-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/came-devops-dev-423320/global/firewalls/m2c-vpc-dev-allow-sql",
            "log_config": [],
            "name": "m2c-vpc-dev-allow-sql",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "priority": 1000,
            "project": "came-devops-dev-423320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/firewalls/m2c-vpc-dev-allow-sql",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-26T16:12:48.792-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/came-devops-dev-423320/global/firewalls/m2c-vpc-dev-allow-ssh",
            "log_config": [],
            "name": "m2c-vpc-dev-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "priority": 1000,
            "project": "came-devops-dev-423320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/firewalls/m2c-vpc-dev-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-0",
            "instance_id": "6961852268602793576",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.200.66",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-1",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-1",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-1",
            "instance_id": "7986627814706191976",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.203.151",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-2",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-2",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-2",
            "instance_id": "7510089575328456297",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.52.32",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-3",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-3",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-3",
            "instance_id": "5600404230554852968",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.206.87.122",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.4.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-4",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-4",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-4",
            "instance_id": "2763523660908142184",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-4",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.84.254",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.5.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-5",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-4",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-5",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-5"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-5",
            "instance_id": "7041141913257320040",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-5",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.35.140",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.6.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-6",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-5",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "6",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-6",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-6"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-6",
            "instance_id": "6074585469189955176",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-6",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.137.193",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.7.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-7",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-6",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "7",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-7",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-7"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-7",
            "instance_id": "8045229658457841256",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-7",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.235.209",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.8.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-8",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-7",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "8",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "m2c-vm-bastion-8",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/disks/m2c-vm-bastion-8"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-8",
            "instance_id": "4457334101024775784",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "53wAgs_4TNc=",
            "name": "m2c-vm-bastion-8",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.110.222",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
                "network_ip": "10.0.9.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-9",
                "subnetwork_project": "came-devops-dev-423320"
              }
            ],
            "project": "came-devops-dev-423320",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/zones/us-central1-a/instances/m2c-vm-bastion-8",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": false,
                "enable_secure_boot": false,
                "enable_vtpm": false
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "m2c-vpc-dev-allow-sql",
              "m2c-vpc-dev-allow-ssh"
            ],
            "tags_fingerprint": "1sSCtG6AeeE=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.firewall.google_compute_firewall.allow_internal",
            "module.firewall.google_compute_firewall.allow_sql",
            "module.firewall.google_compute_firewall.allow_ssh",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "mtu": 1460,
            "name": "m2c-vpc-dev",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "9210412650449673898",
            "project": "came-devops-dev-423320",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.559-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "m2c-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.424-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "m2c-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.446-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-3",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "m2c-subnet-3",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.401-07:00",
            "gateway_address": "10.0.4.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-4",
            "ip_cidr_range": "10.0.4.0/24",
            "name": "m2c-subnet-4",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-4",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.422-07:00",
            "gateway_address": "10.0.5.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-5",
            "ip_cidr_range": "10.0.5.0/24",
            "name": "m2c-subnet-5",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-5",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.591-07:00",
            "gateway_address": "10.0.6.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-6",
            "ip_cidr_range": "10.0.6.0/24",
            "name": "m2c-subnet-6",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-6",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.426-07:00",
            "gateway_address": "10.0.7.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-7",
            "ip_cidr_range": "10.0.7.0/24",
            "name": "m2c-subnet-7",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-7",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.360-07:00",
            "gateway_address": "10.0.8.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-8",
            "ip_cidr_range": "10.0.8.0/24",
            "name": "m2c-subnet-8",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-8",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-26T16:12:27.594-07:00",
            "gateway_address": "10.0.9.1",
            "id": "projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-9",
            "ip_cidr_range": "10.0.9.0/24",
            "name": "m2c-subnet-9",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "came-devops-dev-423320",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/subnetworks/m2c-subnet-9",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64512,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-06-26T16:12:48.869-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/came-devops-dev-423320/regions/us-central1/routers/m2c-vpn-gateway-router",
            "name": "m2c-vpn-gateway-router",
            "network": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/global/networks/m2c-vpc-dev",
            "project": "came-devops-dev-423320",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/came-devops-dev-423320/regions/us-central1/routers/m2c-vpn-gateway-router"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    }
  ]
}